--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,14 @@
     </form>
     <div id="askJSONResult"></div>
 
+    <!-- Form to test /ask/embed endpoint -->
+    <h2>Ask Embed Endpoint Test</h2>
+    <form id="askEmbedForm">
+        <input type="text" name="text" placeholder="Enter text" required>
+        <button type="submit">Submit</button>
+    </form>
+    <div id="askEmbedResult"></div>
+
     <h2>Image Generation Endpoint Test</h2>
     <form id="imageForm">
         <input type="text" name="prompt" placeholder="Enter prompt for image generation" required>
@@ -114,6 +122,7 @@
         <li><a href="/vision">Vision Endpoint</a> - POST</li>
         <li><a href="/ask">Ask Endpoint</a> - POST</li>
         <li><a href="/ask/json">Ask JSON Endpoint</a> - POST</li>
+        <li><a href="/ask/embed">Ask Embeddings Endpoint</a> - POST</li>
         <li><a href="/image">Image Endpoint</a> - POST</li>
         <li><a href="/image/variation">Image Variation Edpoint</a> - POST</li>
         <li><a href="/image/detect">Image Sketch Edpoint</a> - POST</li>
@@ -173,6 +182,23 @@
             .then(response => response.json())
             .then(data => {
                 document.getElementById('askResult').innerText = JSON.stringify(data);
+            });
+        });
+
+        document.getElementById('askEmbedForm').addEventListener('submit', function(e) {
+            e.preventDefault();
+            const text = this.text.value;
+
+            fetch('/ask/embed', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({ text: text })
+            })
+            .then(response => response.json())
+            .then(data => {
+                document.getElementById('askEmbedResult').innerText = JSON.stringify(data.response);
             });
         });
 
